--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vue-sweetalert2": "^4.2.0",
         "vue-the-mask": "^0.11.1",
         "vue-top-progress": "^0.7.0",
+        "vue2-editor": "^2.10.2",
+        "vueditor": "^0.3.1",
         "vuex": "^3.6.2"
     },
     "devDependencies": {
