--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-top-progress": "^0.7.0",
         "vue2-editor": "^2.10.2",
         "vueditor": "^0.3.1",
+        "vuedraggable": "^2.24.3",
         "vuex": "^3.6.2"
     },
     "devDependencies": {
